--- a/earthquake_analysis2.ipynb
+++ b/earthquake_analysis2.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "## Индивидуальное задание вариант 16\n",
     "\n",
-    "**Задача:**Средние показатели "энергичность" и "танцевальность" по жанру\n",
+    "**Задача:** Найти тип землетрясения с максимальной средней магнитудой\n",
     "\n",
-    "**Источник данных:** https://www.kaggle.com/datasets/zaheenhamidani/ultimate-spotify-tracks-db/data?select=SpotifyFeatures.csv\n"
+    "**Источник данных:** https://www.kaggle.com/datasets/usgs/earthquake-database\n"
    ]
   },
   {
