--- a/earthquake_analysis2.ipynb
+++ b/earthquake_analysis2.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Анализ данных землетрясений\n",
+    "###### Анализ средних показателей \"энергичность\" и \"танцевальность\" по жанру\n",
     "\n",
     "## Индивидуальное задание вариант 16\n",
     "\n",
-    "**Задача:** Найти тип землетрясения с максимальной средней магнитудой\n",
+    "**Задача:** Средние показатели \"энергичность\" и \"танцевальность\" по жанру\n",
     "\n",
-    "**Источник данных:** https://www.kaggle.com/datasets/usgs/earthquake-database\n"
+    "**Источник данных:** [https://www.kaggle.com/datasets/zaheenhamidani/ultimate-spotify-tracks-db/data?select=SpotifyFeatures.csv](https://www.kaggle.com/datasets/zaheenhamidani/ultimate-spotify-tracks-db/data?select=SpotifyFeatures.csv)"
    ]
   },
   {
